--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ header span {
 .banner {
     width: 100%;
     height: 50vh;
-    background: url("/img/capa.jpg") no-repeat;
+    background: url("..img/capa.jpg") no-repeat;
     background-size: cover;
     background-position: center;
 }
